--- a/src/App.css
+++ b/src/App.css
@@ -23,10 +23,10 @@ h2 {
 }
 button {
   border: 0;
-  padding: 8px;
+  padding: 8px !important;
   border-radius: 4px;
   color: white;
-  background: var(--primary);
+  background: var(--primary) !important; 
   cursor: pointer;
 }
 
